# Fully-Recursive-Autonomous-Appium

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  LICENSE.md  README.md  USERMANUAL.md  build.sh  restore_all.sh  test_automation.cpp  test_connection.sh
include/: god_watermark.h  swarm_ai.h
include/core/: AdaptiveServer.h
include/system/: MemoryLimiter.h
src/: consolidated.cpp  main.cpp
src/ai/: AgentSwarm.cpp  NanoAgent.cpp  RecursiveOrchestrator.cpp
src/core/: AdaptiveServer.cpp  autonomous_engine.cpp  autonomous_engine.h
src/drivers/: driver_interface.h
src/drivers/android/: uiautomator2_driver.cpp  uiautomator2_driver.h
src/god/: watermark.cpp
src/microservices/: microservices.cpp
src/monitoring/: MetricsServer.cpp
src/swarm/: swarm_ai.cpp  swarm_ai_advanced.cpp
src/system/: MemoryLimiter.cpp  SystemDetector.cpp
